Add style transfer

--- a/image_colorization.ipynb
+++ b/image_colorization.ipynb
@@ -9,7 +9,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model from checkpoint: model_epoch_06.keras\n",
+      "Loading model from checkpoint: model_epoch_06.keras\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python312\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:713: UserWarning: Skipping variable loading for optimizer 'adam', because it has 2 variables whereas the saved optimizer has 46 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch 7/106\n"
      ]
     },
@@ -25,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m  1/323\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m4:37:47\u001b[0m 52s/step - loss: 0.0017"
+      "\u001b[1m287/323\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━\u001b[0m \u001b[1m16:22\u001b[0m 27s/step - loss: 0.0024"
      ]
     }
    ],
@@ -151,7 +165,7 @@
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=1e-5), loss='mse')\n",
     "\n",
     "# Check for existing checkpoints and load the latest one\n",
-    "checkpoint_dir = './checkpoints/'\n",
+    "checkpoint_dir = './colorizationCheckpoints/'\n",
     "latest_file, latest_epoch = get_latest_epoch(checkpoint_dir)\n",
     "\n",
     "if latest_file:\n",
@@ -165,7 +179,7 @@
     "early_stopping = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
     "\n",
     "# Define checkpoint callback to save the model at each epoch\n",
-    "checkpoint_filepath = './checkpoints/model_epoch_{epoch:02d}.keras'\n",
+    "checkpoint_filepath = './colorizationCheckpoints/model_epoch_{epoch:02d}.keras'\n",
     "model_checkpoint = ModelCheckpoint(\n",
     "    filepath=checkpoint_filepath, \n",
     "    save_best_only=False,  # Set to True to only save the best model based on val_loss\n",
@@ -217,7 +231,7 @@
     "from skimage.transform import resize  # Import resize for better quality\n",
     "\n",
     "# Load your trained model\n",
-    "model = load_model('./checkpoints/model_epoch_06.keras')  # Adjust the path and file name as necessary\n",
+    "model = load_model('./colorizationCheckpoints/model_epoch_06.keras')  # Adjust the path and file name as necessary\n",
     "\n",
     "# Testing the model with a higher resolution image\n",
     "folder_path = './Images/gray/'\n",
